fix layout misalignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,6 +14,7 @@
 
   .col {
     flex: 1 1 auto;
+    margin: 0;
     margin-right: 1em;
     margin-left: 1em;
   }
@@ -23,11 +24,11 @@
   }
 
   .col:first-child {
-    margin-left: 1em;
+    margin-left: 0;
   }
 
   .col:last-child {
-    margin-right: 1em;
+    margin-right: 0;
   }
 
   .patterns-lib>h2 {
